# AI-Runtime-Optimization

./: .gitignore  CMakeLists.txt  fibcilk.c  main.cpp  test_attention.cpp
include/: attention.h  fib.h  runtime.h  softmax_attn.h  wsqueue.h
perf/intel_i7/: intel_i7_cpu20_t10.txt  intel_i7_cpu20_t12.txt  intel_i7_cpu20_t14.txt  intel_i7_cpu20_t16.txt  intel_i7_cpu20_t18.txt  intel_i7_cpu20_t20.txt  intel_i7_cpu20_t8.txt
scripts/: run_thread_exp.py
temp/: cpu_info.txt  thread_exp_16.txt  thread_exp_32.txt  thread_exp_64.txt  thread_exp_8.txt
